--- a/src/App/ShowCaseBundle/Resources/views/menu/horizontal_menu.html.twig
+++ b/src/App/ShowCaseBundle/Resources/views/menu/horizontal_menu.html.twig
@@ -25,5 +25,6 @@
                 <li><a href="#"><img alt="" src="{{ asset('img/flags/us.png') }}"> {{ 'languages.us' | trans }}</a></li>
             </ul>
         </li>
+        <li ><a href="{{ path('fos_user_security_login') }}">{{ 'menu.connexion_btn'| trans }}</a></li>
     </ul>
 </div>
