update wip-area css

--- a/src/App/ShowCaseBundle/Resources/views/menu/horizontal_menu.html.twig
+++ b/src/App/ShowCaseBundle/Resources/views/menu/horizontal_menu.html.twig
@@ -2,7 +2,7 @@
     <ul class="nav navbar-nav">
         <li class=""><a href="{{ path('app_show_case_homepage') }}">{{ 'menu.home' | trans }}</a></li>
         <li><a href="{{ path('app_show_case_about') }}">{{ 'menu.about' | trans }}</a></li>
-        <li><a href="{{ path('app_show_case_freelance') }}">{{ 'menu.services' | trans }}</a></li>
+        <li><a href="{{ path('app_show_case_freelance') }}">{{ 'menu.services' | trans }}</a><div class="wip-panel">Work in progress</div></li>
         <li class="dropdown ">
             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">{{ 'menu.features' | trans }} <b class=" fa fa-angle-down"></b></a>
             <ul class="dropdown-menu">
@@ -10,7 +10,7 @@
                 <li><a href="{{ path('app_show_case_project') }}">{{ 'menu.professional_projects' | trans }}</a></li>
             </ul>
         </li>
-        <li><a href="{{ path('app_show_case_learning') }}">{{ 'menu.learning' | trans }}</a></li>
+        <li><a href="{{ path('app_show_case_learning') }}">{{ 'menu.learning' | trans }}</a><div class="wip-panel">Work in progress</div></li>
         <li ><a href="{{ path('app_show_case_contact') }}">{{ 'menu.contact' | trans }}</a></li>
         <li class="dropdown language active">
             <a href="#" class="dropdown-toggle active" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
