--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -242,10 +242,24 @@ p::selection {
 }
 .wip-panel {
     color: red;
+    font-size: 15px;
     transform: rotate(-45deg);
     font-weight: bold;
-    opacity: 0.9;
+    opacity: 0.8;
     text-align: center;
     position: absolute;
     top: 30px;
+    width: 100px;
+}
+.about-picture {
+    width: 300px;
+    height: 263px;
+    margin: auto;
+    border-radius: 5px;
+    margin: auto;
+}
+
+.carousel {
+    position: relative;
+    text-align: center;
 }
