--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,6 +35,9 @@
 <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
+            <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+            <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+            <script src="{{ asset('js/custom-js/custom-routing.js') }}"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
         {% endblock %}
     </body>
