--- a/src/App/ShowCaseBundle/Resources/views/front/about.html.twig
+++ b/src/App/ShowCaseBundle/Resources/views/front/about.html.twig
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="col-lg-7 about">
-                <h3>A propos de moi</h3>
+                <h3>A propos de moi {{ "now"|date("m/d/Y H:i:s") }} <span id="js-routing"></span></h3>
                 <p>
                     Welcome To Avada
                     Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore dolore magnm aliquam quaerat voluptatem.
