--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,7 +45,7 @@
                 // remember me local storage management
                 document.querySelector('#remember_me');
                 addEventListener('submit', function(e) {
-                    e.preventDefault();
+                    // e.preventDefault();
                     const username = document.querySelector('#username').value;
                     const password = document.querySelector('#password').value;
                     console.log(document.querySelector('#username').value);
