--- a/src/App/ShowCaseBundle/Resources/views/front/header.html.twig
+++ b/src/App/ShowCaseBundle/Resources/views/front/header.html.twig
@@ -14,4 +14,5 @@
         </div>
     </div>
 </header>
+<span style="float: right; margin-right: 10px" class="last-updated">Last cache: {{ "now"|date("d/m/Y H:i:s") }}</span>
 <!--header end-->
