wip + fix form errors messages displayed

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mosaddek">
     <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
+    <meta name="google-signin-client_id" content="701194692889-9m95tmg84j1okehfspvvmo26lcvpt39c.apps.googleusercontent.com">
     <link rel="shortcut icon" href="img/favicon.png">
     <title>{% block title %}{{ 'homepage.welcome.title' | trans() }}{% endblock title %}</title>
 
