--- a/src/App/ShowCaseBundle/Resources/views/front/contact.html.twig
+++ b/src/App/ShowCaseBundle/Resources/views/front/contact.html.twig
@@ -47,7 +47,7 @@
             <div class="col-lg-7 col-sm-7 address">
                 <h4>Me contacter</h4>
                 <div class="contact-form">
-                    {{ form_start(form) }}
+                    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
                     {{ form_end(form) }}
 
                     {#<form role="form">#}
