--- a/src/App/ShowCaseBundle/Resources/views/front/home_page.html.twig
+++ b/src/App/ShowCaseBundle/Resources/views/front/home_page.html.twig
@@ -13,6 +13,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <h1>{{ 'homepage.area_one.title'| trans }}</h1>
+                    <div class="g-signin2" data-onsuccess="onSignIn"></div>
                     <p>{{ 'homepage.area_one.content'| trans }}</p>
                 </div>
             </div>
@@ -65,6 +66,7 @@
         <script type="text/javascript" src="{{ asset('js/hover-dropdown.js') }}"></script>
         <script type="text/javascript" src="{{ asset('assets/bxslider/jquery.bxslider.js') }}"></script>
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&AMP;sensor=false"></script>
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
         <!--common script for all pages-->
         <script src="{{ asset('js/common-scripts.js') }}"></script>
         <script>
