--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -209,16 +209,8 @@ p::selection {
 }
 
 .project-packet {
-    /*background-color: #269b34;
-    width: 25%;
-    height: 300px;
-    text-align: center;
-    border-radius: 10px;
-    color: white;
-    display: inline-flex;
-    margin: 10px;*/
-
-    background-color: #175d20a3;
+    /*background-color: #175d20a3; only on chrome canary*/
+    background-color: rgba(23, 93, 32, 0.64);
     width: 25%;
     height: 300px;
     text-align: center;
@@ -291,4 +283,9 @@ p::selection {
     background-color: green;
     width: 200px;
     height: 200px;
+}
+
+form ul li {
+    color: red;
+    list-style: none;
 }
